# crankshaft

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  rustfmt.toml
.github/: pull_request_template.md
.github/workflows/: CI.yml  docs.yml
crankshaft/: CHANGELOG.md  Cargo.toml
crankshaft-config/: CHANGELOG.md  Cargo.toml
crankshaft-config/src/: backend.rs  builder.rs  lib.rs
crankshaft-config/src/backend/: builder.rs  defaults.rs  docker.rs  generic.rs  kind.rs  tes.rs
crankshaft-config/src/backend/docker/: builder.rs
crankshaft-config/src/backend/generic/: builder.rs  driver.rs
crankshaft-config/src/backend/generic/driver/: builder.rs  locale.rs  shell.rs  ssh.rs
crankshaft-config/src/backend/tes/: builder.rs  http.rs
crankshaft-config/test/fixtures/config/: duplicate_names.toml  example.toml
crankshaft-console/: CHANGELOG.md  Cargo.toml
crankshaft-console/console/: Cargo.toml
crankshaft-console/src/: config.rs  conn.rs  input.rs  intern.rs  lib.rs  main.rs  state.rs  term.rs  view.rs
crankshaft-console/src/state/: mod.rs  resource.rs  task.rs
crankshaft-console/src/view/: mod.rs  resources.rs  styles.rs  tasks.rs
crankshaft-docker/: CHANGELOG.md  Cargo.toml
crankshaft-docker/src/: container.rs  events.rs  images.rs  lib.rs  service.rs
crankshaft-docker/src/container/: builder.rs
crankshaft-docker/src/service/: builder.rs
crankshaft-engine/: CHANGELOG.md  Cargo.toml
crankshaft-engine/src/: lib.rs  service.rs  task.rs
crankshaft-engine/src/service/: name.rs  runner.rs
crankshaft-engine/src/service/runner/: backend.rs
crankshaft-engine/src/service/runner/backend/: docker.rs  generic.rs  tes.rs
crankshaft-engine/src/service/runner/backend/generic/: driver.rs
crankshaft-engine/src/service/runner/backend/tes/: monitor.rs
crankshaft-engine/src/task/: builder.rs  execution.rs  input.rs  output.rs  resources.rs
crankshaft-engine/src/task/execution/: builder.rs
crankshaft-engine/src/task/input/: builder.rs  contents.rs
crankshaft-engine/src/task/output/: builder.rs
crankshaft-engine/src/task/resources/: builder.rs
crankshaft-events/: CHANGELOG.md  Cargo.toml
crankshaft-events/src/: lib.rs
crankshaft-monitor/: CHANGELOG.md  Cargo.toml  build.rs
crankshaft-monitor/src/: lib.rs  proto.rs  server.rs  service.rs
crankshaft-monitor/src/proto/: crankshaft.monitor.rs  mod.rs  monitor.proto
crankshaft-monitor/tests/: server.rs
crankshaft-tui/: Cargo.toml
crankshaft-tui/src/: app.rs  events.rs  fixes.rs  main.rs  renderer.rs
crankshaft-tui/src/data/: app,json
crankshaft-tui/src/screens/: details.rs  logs.rs  mod.rs  profiles.rs  services.rs
crankshaft-tui/src/ui/: mod.rs  theme.rs  widgets.rs
crankshaft/examples/: docker.rs  driver.rs  lsf.rs  tes.rs
crankshaft/src/: lib.rs
docs/: configuration.md  examples.md  index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/api/: engine.md  execution.md  io.md  resources.md  task.md
docs/backends/: introduction.md
docs/configuration/: backends.md  overview.md
docs/configuration/backends/: docker.md  generic.md  tes.md
docs/examples/: overview.md
docs/getting-started/: installation.md
docs/guide/: concepts.md  getting-started.md  introduction.md
docs/troubleshooting/: overview.md
examples/: Cargo.toml
examples/src/docker/: README.md  docker_monitored.rs  main.rs  monitored.rs
examples/src/local_example/: README.md  fibonacci_calculator.py  local_example.rs
examples/src/lsf/: README.md  main.rs
examples/src/tes/: README.md  main.rs
