[package]
name = "crankshaft-config"
description = "Configuration facilities for Crankshaft"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bon.workspace = true
config.workspace = true
dirs.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
url.workspace = true

[lints]
workspace = true
