[package]
name = "crankshaft-config"
description = "Configuration facilities for Crankshaft"
version = "0.2.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bon.workspace = true
dirs.workspace = true
figment.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
url.workspace = true

[lints]
workspace = true
