[package]
name = "crankshaft-config"
description = "Configuration facilities for Crankshaft"
version = "0.3.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
bon.workspace = true
config.workspace = true
dirs.workspace = true
handlebars.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[lints]
workspace = true
