[package]
name = "crankshaft-console"
version = "0.1.0"
edition = "2021"

[dependencies]
crankshaft-monitor = { path = "../crankshaft-monitor", version = "0.1.0" }
ratatui.workspace = true
crossterm.workspace = true
color-eyre.workspace = true
anyhow.workspace = true
serde.workspace = true
tonic.workspace = true
tracing.workspace = true
tokio.workspace = true
futures-util.workspace = true

[lints]
workspace = true
