[package]
name = "crankshaft-console"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
color-eyre.workspace = true
crankshaft-monitor = { path = "../crankshaft-monitor", version = "0.1.0" }
crossterm.workspace = true
futures-util.workspace = true
prost-types.workspace = true
ratatui.workspace = true
serde.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
