[package]
name = "crankshaft-docker"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bollard.workspace = true
bon.workspace = true
clap = { workspace = true, optional = true }
clap-verbosity-flag = { workspace = true, optional = true }
eyre = { workspace = true, optional = true }
futures.workspace = true
indexmap = { workspace = true }
serde.workspace = true
shlex = { workspace = true, optional = true }
tar.workspace = true
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-stream.workspace = true
tracing.workspace = true
tracing-log = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]

[lints]
workspace = true

[features]
binaries = [
    "dep:clap",
    "dep:clap-verbosity-flag",
    "dep:eyre",
    "dep:shlex",
    "dep:tokio",
    "dep:tracing-log",
    "dep:tracing-subscriber",
]

[[bin]]
name = "docker-driver"
test = false
bench = false
required-features = ["binaries"]
