[package]
name = "crankshaft-docker"
description = "Docker facilities for Crankshaft"
version = "0.2.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bollard.workspace = true
bon.workspace = true
clap = { workspace = true, optional = true }
clap-verbosity-flag = { workspace = true, optional = true }
futures.workspace = true
indexmap = { workspace = true }
serde.workspace = true
shlex = { workspace = true, optional = true }
tar.workspace = true
thiserror = { workspace = true }
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-log = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]

[lints]
workspace = true

[features]
binaries = [
    "dep:clap",
    "dep:clap-verbosity-flag",
    "dep:shlex",
    "dep:tracing-log",
    "dep:tracing-subscriber",
]

[[bin]]
name = "docker-driver"
test = false
bench = false
required-features = ["binaries"]
