[package]
name = "crankshaft-docker"
description = "Docker facilities for Crankshaft"
version = "0.4.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "docker-driver"
test = false
bench = false
required-features = ["binaries"]

[features]
binaries = [
    "dep:clap",
    "dep:clap-verbosity-flag",
    "dep:shlex",
    "dep:tracing-log",
    "dep:tracing-subscriber",
]

[dependencies]
anyhow.workspace = true
bollard.workspace = true
bon.workspace = true
clap = { workspace = true, optional = true }
clap-verbosity-flag = { workspace = true, optional = true }
crankshaft-events = { path = "../crankshaft-events", version = "0.1.0" }
futures.workspace = true
indexmap = { workspace = true }
nix.workspace = true
serde.workspace = true
shlex = { workspace = true, optional = true }
tar.workspace = true
thiserror = { workspace = true }
tokio.workspace = true
tokio-retry2.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-log = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
