[package]
name = "crankshaft-engine"
description = "The core engine that comprises Crankshaft"
version = "0.4.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
monitoring = ["dep:crankshaft-monitor"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bollard.workspace = true
bon.workspace = true
crankshaft-config = { path = "../crankshaft-config", version = "0.3.0" }
crankshaft-docker = { path = "../crankshaft-docker", version = "0.2.0" }
crankshaft-events = { path = "../crankshaft-events", version = "0.1.0" }
crankshaft-monitor = { path = "../crankshaft-monitor", version = "0.1.0", optional = true }
futures.workspace = true
growable-bloom-filter.workspace = true
indexmap.workspace = true
nonempty.workspace = true
rand.workspace = true
regex.workspace = true
shlex.workspace = true
ssh2.workspace = true
tar.workspace = true
tempfile.workspace = true
tes.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-metrics.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
whoami.workspace = true

[dev-dependencies]
approx.workspace = true

[lints]
workspace = true
