[package]
name = "crankshaft-monitor"
description = "An implementation of a Crankshaft monitor server"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-stream.workspace = true
crankshaft-events = { version = "0.1.0", path = "../crankshaft-events" }
futures-core.workspace = true
futures-util.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
nonempty.workspace = true
tokio-retry2.workspace = true

[lints]
workspace = true
