[package]
name = "crankshaft-tui"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A terminal user interface for managing container workflows."
license = "MIT"
repository = "https://github.com/stjude-rust-labs/crankshaft"
readme = "README.md"

# Specify the binary entry point
[[bin]]
name = "crankshaft-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.26"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
futures-executor = "0.3"
futures = "0.3"
unicode-width = "0.1.10"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

