[package]
name = "crankshaft"
description = "A headless task execution engine that supports local, cloud, and HPC"
version = "0.3.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crankshaft-config = { path = "../crankshaft-config", version = "0.2.0" }
crankshaft-engine = { path = "../crankshaft-engine", version = "0.3.0" }

[features]
default = ["config", "engine"]
config = []
engine = []

[lints]
workspace = true
