[package]
name = "crankshaft"
description = "A headless task execution engine that supports local, cloud, and HPC"
version = "0.6.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["config", "engine", "events"]
config = ["dep:crankshaft-config"]
engine = ["dep:crankshaft-engine"]
events = ["dep:crankshaft-events"]
docker = ["dep:crankshaft-docker"]
monitoring = ["dep:crankshaft-engine", "crankshaft-engine/monitoring"]

[dependencies]
crankshaft-config = { path = "../crankshaft-config", version = "0.5.0", optional = true }
crankshaft-docker = { path = "../crankshaft-docker", version = "0.3.0", optional = true }
crankshaft-engine = { path = "../crankshaft-engine", version = "0.6.0", optional = true }
crankshaft-events = { path = "../crankshaft-events", version = "0.1.0", optional = true }

[lints]
workspace = true
