[package]
name = "examples"
publish = false
version = "0.0.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
crankshaft = { path = "../crankshaft" }
crankshaft-monitor = { path = "../crankshaft-monitor" }
clap.workspace = true
dirs.workspace = true
nonempty.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
indicatif.workspace = true
futures.workspace = true

[[bin]]
name = "docker"
path = "src/docker/main.rs"

[[bin]]
name = "docker-rpc"
path = "src/docker/docker_monitored.rs"

[[bin]]
name = "lsf"
path = "src/lsf/main.rs"

[[bin]]
name = "tes"
path = "src/tes/main.rs"

[lints]
workspace = true
