[package]
name = "examples"
publish = false
version = "0.0.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "docker"
path = "src/docker/main.rs"

[[bin]]
name = "docker-monitored"
path = "src/docker/monitored.rs"
required-features = ["monitoring"]

[[bin]]
name = "lsf"
path = "src/lsf/main.rs"

[[bin]]
name = "tes"
path = "src/tes/main.rs"

[features]
default = []
monitoring = ["dep:crankshaft-monitor", "crankshaft/monitoring"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
crankshaft = { path = "../crankshaft" }
crankshaft-monitor = { path = "../crankshaft-monitor", optional = true }
futures.workspace = true
indicatif.workspace = true
nonempty.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[lints]
workspace = true
